<resources>
    <string name="app_name">AnChan</string>
    <string name="thread_op">OP</string>
    <string name="post_number">POST NUMBER</string>
    <string name="thread_title">TITLE</string>
    <string name="thread_reply">REPLY</string>
    <string name="co_board">co</string>
    <string name="tv_board">tv</string>
    <string name="v_board">v</string>
    <string name="an_board">an</string>
    <string name="boards_placeholder">Here will be the list of boards</string>
    <string name="page_placeholder">This is a placeholder for a board page</string>
    <string name="thread_placeholder">This is a placeholder for a tread page</string>
    <string name="thread_filename">filename.jpg</string>
    <string name="post_timestamp">09/01/19 (Mon) 13:39:38</string>
    <string name="board_name"><![CDATA[Board & Name]]></string>
    <string name="board_code">bc</string>
    <string name="separator">-</string>
</resources>
