<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/outer_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/post_background_color"
                app:cardElevation="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/inner_cl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp">


                <TableRow
                        android:id="@+id/post_head_tr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                            android:id="@+id/post_num_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:padding="5dp"
                            android:text="@string/post_number"
                            android:textColor="#FFFFFFFF"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/post_time_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:padding="5dp"
                            android:text="@string/post_timestamp"
                            android:textColor="#FFFFFFFF"
                            android:textStyle="bold" />

                </TableRow>

                <ImageView
                        android:id="@+id/post_img_iv"
                        android:layout_height="100dp"
                        android:layout_width="100dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitCenter"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/post_head_tr"
                        tools:srcCompat="@tools:sample/avatars" />

                <TextView
                        android:id="@+id/post_reply_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/thread_reply"
                        android:textAlignment="viewStart"
                        app:layout_constraintLeft_toRightOf="@id/post_img_iv"
                        app:layout_constraintTop_toTopOf="@id/post_img_iv" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
